# grand-edge

./: .env.docker.example  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.dev.yml
configs/: default.toml  local.example.toml
corpus/: README.md
crates/analytics/: Cargo.toml
crates/analytics/src/: archive.rs  datasets.rs  edge_stability.rs  errors.rs  learned_edges.rs  lib.rs  manifest.rs  object_store.rs  parquet.rs  reports.rs  retention.rs
crates/api/: Cargo.toml
crates/api/src/: app.rs  auth.rs  config.rs  errors.rs  lib.rs  main.rs  openapi.rs  state.rs
crates/api/src/evidence/: view.rs
crates/api/src/market/: mod.rs  status_view.rs
crates/api/src/model_accuracy/: mod.rs  summary_view.rs
crates/api/src/recommendations/: view.rs
crates/api/src/routes/: auth.rs  evidence.rs  items.rs  live.rs  mod.rs  positions.rs  recommendations.rs  simulations.rs  strategies.rs
crates/api/tests/: api_contract.rs  api_routes.rs
crates/api/tests/snapshots/: api_contract__api_recommendation_dto.snap
crates/configuration/: Cargo.toml
crates/configuration/src/: app.rs  errors.rs  lib.rs  loader.rs  logging.rs  secrets.rs
crates/configuration/tests/: configuration_tests.rs
crates/domain/: Cargo.toml
crates/domain/src/: auth.rs  corpus.rs  evidence.rs  explanation.rs  feature.rs  graph.rs  ids.rs  item.rs  lib.rs  market_event.rs  market_rules.rs  metrics.rs  model.rs  money.rs  outcome.rs  percent.rs  position.rs  prediction.rs  price.rs  quantity.rs  reason_metrics.rs  recommendation.rs  risk.rs  simulation.rs  strategy.rs  time.rs  validation.rs
crates/domain/tests/: market_rules_properties.rs
crates/features/: Cargo.toml
crates/features/benches/: feature_recompute.rs
crates/features/src/: calculations.rs  config.rs  engine.rs  errors.rs  fixtures.rs  graph.rs  lib.rs  snapshot.rs
crates/grandedge_py/: Cargo.toml
crates/grandedge_py/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: checkpoint.rs  client.rs  config.rs  corpus.rs  dto.rs  errors.rs  jobs.rs  lib.rs  normalize.rs  relations.rs  scheduler.rs  wiki_images.rs
crates/ingest/tests/: ingest_integration.rs  live_osrs_wiki.rs  normalize_tests.rs  wiki_client_wiremock.rs
crates/ingest/tests/fixtures/: interval_5m_sample.json  mapping_sample.json
crates/metrics/: Cargo.toml
crates/metrics/src/: calibration.rs  engine.rs  errors.rs  forecast.rs  graph.rs  lib.rs  reason_metrics.rs  recommendation_outcomes.rs  risk.rs  trading.rs  windows.rs
crates/metrics/tests/: reason_metrics_refresh.rs  recommendation_outcomes.rs
crates/model_runtime/: Cargo.toml
crates/model_runtime/src/: artifacts.rs  coefficients.rs  errors.rs  lib.rs  onnx.rs  runtime.rs  schema.rs
crates/model_runtime/tests/: runtime_tests.rs
crates/model_runtime/tests/fixtures/coefficients/meta_label_v1/2026-06-16.1/: calibration.json  coefficients.json  feature_schema.json  model_card.json
crates/model_runtime/tests/fixtures/python_export/gbm_ranker_v1/2026-06-16.1/: calibration.json  feature_schema.json  model.onnx  model_card.json
crates/recommender/: Cargo.toml
crates/recommender/benches/: recommend_all.rs
crates/recommender/src/: actions.rs  confidence.rs  config.rs  engine.rs  errors.rs  explanations.rs  graph_actions.rs  lib.rs  prediction_links.rs  quantity.rs  reason_atoms.rs  scoring.rs
crates/recommender/tests/: recommendation_properties.rs  recommendation_snapshots.rs  risk_overlay_explanations.rs
crates/recommender/tests/snapshots/: recommendation_snapshots__recommendation_explanation.snap
crates/simulator/: Cargo.toml
crates/simulator/benches/: historical_replay.rs
crates/simulator/src/: blast_radius.rs  config.rs  engine.rs  errors.rs  fills.rs  lib.rs  orders.rs  pnl.rs  replay.rs
crates/simulator/tests/: fill_properties.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_initial.sql  0002_ingestion_checkpoints.sql  0003_evidence_ledger.sql  0004_reason_outcome_dimensions.sql  0005_auth_and_risk_profiles.sql  0005_market_graph.sql
crates/storage/src/: auth.rs  checkpoints.rs  corpus_sources.rs  errors.rs  evidence.rs  features.rs  graph.rs  items.rs  lib.rs  market_events.rs  metrics.rs  outcomes.rs  pool.rs  positions.rs  predictions.rs  prices.rs  reason_outcomes.rs  recommendations.rs  simulations.rs  strategies.rs
crates/storage/tests/: postgres_integration.rs  storage_integration.rs
crates/strategies/: Cargo.toml
crates/strategies/benches/: strategy_batch.rs
crates/strategies/src/: artifacts.rs  config.rs  context.rs  errors.rs  lib.rs  prediction_adapter.rs  registry.rs  traits.rs  validation.rs
crates/strategies/src/builtin/: advanced_risk_overlay.rs  ar_baseline.rs  conformal_interval.rs  contextual_bandit.rs  execution_confidence.rs  gbm_ranker.rs  kalman_fair_value.rs  mean_reversion.rs  meta_label.rs  mod.rs  momentum.rs  online_ensemble.rs  portfolio_optimizer.rs  regime_hmm.rs  spread_edge.rs  volatility_filter.rs
crates/strategies/src/math/: ar.rs  kalman.rs  mod.rs
crates/strategies/src/uncertainty/: conformal.rs  mod.rs  regime.rs  risk_overlay.rs
crates/strategies/tests/: advanced_baselines_tests.rs  artifact_contracts_tests.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: cli.rs  commands.rs  main.rs
crates/xtask/src/commands/: archive.rs  schema.rs
crates/xtask/src/commands/snapshots/: grandedge__commands__schema__tests__model_artifact_metadata_schema.snap  grandedge__commands__schema__tests__recommendation_explanation_schema.snap  grandedge__commands__schema__tests__strategy_config_schema.snap
docker/: api.Dockerfile  web.Dockerfile
docs/: developer-guide.md
ml/: README.md  pyproject.toml
ml/docs/: rust-bindings.md
ml/src/grandedge_ml/: __init__.py  artifact_schema.py  calibration.py  datasets.py  evaluate.py  export.py  features.py  labels.py  train_gbm.py  train_meta_label.py
ml/src/grandedge_py/: __init__.py
ml/tests/: test_artifact_schema.py  test_export.py  test_features.py  test_labels.py  test_rust_bindings.py
schemas/: artifact_feature_schema_document.schema.json  (+8 more)
(+213 files in other folders)
