[workspace]
members = [
  "crates/configuration",
  "crates/domain",
  "crates/ingest",
  "crates/storage",
  "crates/features",
  "crates/strategies",
  "crates/recommender",
  "crates/simulator",
  "crates/metrics",
  "crates/api",
  "crates/xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Scottlr/grand-edge"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
config = "0.15"
dotenvy = "0.15"
miette = { version = "7", features = ["fancy"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }
