[workspace]
members = [
  "crates/configuration",
  "crates/domain",
  "crates/model_runtime",
  "crates/ingest",
  "crates/storage",
  "crates/analytics",
  "crates/features",
  "crates/strategies",
  "crates/recommender",
  "crates/simulator",
  "crates/metrics",
  "crates/api",
  "crates/grandedge_py",
  "crates/xtask",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Scottlr/grand-edge"

[workspace.dependencies]
approx = "0.5"
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
config = "0.15"
criterion = "0.7"
dotenvy = "0.15"
insta = { version = "1", features = ["json"] }
miette = { version = "7", features = ["fancy"] }
proptest = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rstest = "0.25"
schemars = { version = "1", features = ["chrono04", "uuid1"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py312"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }
testcontainers = "0.25"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }
wiremock = "0.6"
