[package]
name = "grand-edge-analytics"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
grand-edge-domain = { path = "../domain" }
grand-edge-storage = { path = "../storage" }
polars = { version = "0.50", default-features = false, features = ["lazy", "parquet", "temporal", "dtype-struct", "fmt"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tempfile = "3"
thiserror.workspace = true
uuid.workspace = true
