[package]
name = "grand-edge-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "grand-edge-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
grand-edge-configuration = { path = "../configuration" }
grand-edge-domain = { path = "../domain" }
grand-edge-features = { path = "../features" }
grand-edge-ingest = { path = "../ingest" }
grand-edge-metrics = { path = "../metrics" }
grand-edge-recommender = { path = "../recommender" }
grand-edge-simulator = { path = "../simulator" }
grand-edge-storage = { path = "../storage" }
grand-edge-strategies = { path = "../strategies" }
