[package]
name = "grand-edge-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "grand-edge-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
grand-edge-configuration = { path = "../configuration" }
grand-edge-domain = { path = "../domain" }
grand-edge-features = { path = "../features" }
grand-edge-ingest = { path = "../ingest" }
grand-edge-metrics = { path = "../metrics" }
grand-edge-recommender = { path = "../recommender" }
grand-edge-simulator = { path = "../simulator" }
grand-edge-storage = { path = "../storage" }
grand-edge-strategies = { path = "../strategies" }
http-body-util = "0.1"
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

[dev-dependencies]
insta.workspace = true
