[package]
name = "grand-edge-configuration"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
config.workspace = true
dotenvy.workspace = true
grand-edge-domain = { path = "../domain" }
grand-edge-ingest = { path = "../ingest" }
grand-edge-storage = { path = "../storage" }
miette.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
