[package]
name = "grand-edge-features"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
grand-edge-domain = { path = "../domain" }
grand-edge-storage = { path = "../storage" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
sqlx.workspace = true
tokio.workspace = true
