[package]
name = "grandedge_py"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "grandedge_py"
crate-type = ["cdylib"]

[dependencies]
grand-edge-domain = { path = "../domain" }
grand-edge-features = { path = "../features" }
grand-edge-simulator = { path = "../simulator" }
pyo3.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
uuid.workspace = true
