[package]
name = "grand-edge-ingest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
config.workspace = true
dotenvy.workspace = true
grand-edge-domain = { path = "../domain" }
grand-edge-storage = { path = "../storage" }
chrono.workspace = true
percent-encoding = "2"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio.workspace = true
