[package]
name = "grand-edge-model-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["coefficients"]
coefficients = []
onnx = ["dep:ort"]

[dependencies]
chrono.workspace = true
grand-edge-domain = { path = "../domain" }
grand-edge-strategies = { path = "../strategies" }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std", "load-dynamic", "api-24"] }
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
