[package]
name = "grand-edge-recommender"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
grand-edge-domain = { path = "../domain" }
grand-edge-metrics = { path = "../metrics" }
grand-edge-simulator = { path = "../simulator" }
grand-edge-storage = { path = "../storage" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
proptest.workspace = true
rstest.workspace = true
sqlx.workspace = true
tokio.workspace = true

[[bench]]
name = "recommend_all"
harness = false
