[package]
name = "grand-edge-strategies"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
grand-edge-domain = { path = "../domain" }
grand-edge-storage = { path = "../storage" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
tokio.workspace = true

[[bench]]
name = "strategy_batch"
harness = false
