[package]
name = "grand-edge-xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "grandedge"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
clap.workspace = true
grand-edge-configuration = { path = "../configuration" }
grand-edge-domain = { path = "../domain" }
grand-edge-ingest = { path = "../ingest" }
grand-edge-storage = { path = "../storage" }
miette.workspace = true
secrecy.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
